[flake8]
# overridden common style settings
max-line-length = 120

# ignored entities
exclude =
    venv
    # this is the externally taken as-is module, to this moment
    # the intention is to keep it absolutely the same as in mainline
    core_api/async_tasks/huey_consumer.py

per-file-ignores =
    # some imports in Flask Blueprints registration *have* to be
    # in the middle and unused - for export
    core_api/main/api/root/__init__.py:F401,E402
    core_api/main/api/v1/__init__.py:F401,E402
    # db models should be imported in the middle of db bootstrap
    # to ensure it works correctly
    core_api/extensions/database.py:F401
    # export module
    core_api/main/models/__init__.py:F401

# flake8 run mode configurations
show_source = True

[metadata]
name = core-api-flask-seed
version = 0.0.1
author = Alexander Demidovskij
author_email = alexander.demidovskij@intel.com
description = An example package to demonstrate seed Flask project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    = core_api
packages = find:
include_package_data = true
install_requires =
    dynaconf==3.1.7
    flask==2.0.2
    flask-cors==3.0.10
    flask-pydantic-spec==0.2.1
    flask-restful==0.3.9
    flask-sqlalchemy==2.5.1
    huey==2.4.3
    pydantic==1.9.0

[options.packages.find]
where = core_api

[options.entry_points]
console_scripts =
    core_api_cli = core_api.cli_entrypoint:main
